fixed some layout and constraints

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -61,8 +61,9 @@
         android:background="#FFFF8D"
         android:fontFamily="sans-serif"
         android:text="LOGIN"
-        android:textColor="#BCBCBC"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +79,9 @@
         android:fontFamily="sans-serif"
         android:hint="Password:"
         android:inputType="textPassword"
-        android:textColorHint="#F8F8F8"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email" />
@@ -93,7 +96,9 @@
         android:fontFamily="sans-serif"
         android:hint="Email:"
         android:inputType="textPersonName"
-        android:textColorHint="#F8F8F8"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -110,7 +115,8 @@
         android:shadowColor="#B4B1B1"
         android:text="Login"
         android:textColor="#FFFF8D"
-        android:textSize="24sp"
+        android:textSize="28sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -129,6 +135,7 @@
         android:text="@string/app_name"
         android:textColor="#FFFFFF"
         android:textSize="36sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -170,6 +177,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:buttonTint="#FFEB3B"
         android:onClick="saveUserEmailPassword"
         android:text="Remember my email and password"
         android:textColor="#FFFFFF"
