--- a/app/src/main/res/layout/activity_create_station.xml
+++ b/app/src/main/res/layout/activity_create_station.xml
@@ -238,6 +238,7 @@
                 android:text="Create Station"
                 android:textColor="#FFFFFF"
                 android:textSize="24dp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
