--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -29,10 +29,12 @@
         android:layout_marginEnd="8dp"
         android:elegantTextHeight="true"
         android:fontFamily="sans-serif"
+        android:gravity="center"
         android:shadowColor="#B4B1B1"
         android:text="@string/app_name"
         android:textColor="#FFFFFF"
         android:textSize="36sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,10 +46,12 @@
         android:layout_height="34dp"
         android:elegantTextHeight="true"
         android:fontFamily="sans-serif"
+        android:gravity="center"
         android:shadowColor="#B4B1B1"
         android:text="Register New Account"
         android:textColor="#FFFF8D"
-        android:textSize="18sp"
+        android:textSize="22sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,8 +85,9 @@
         android:background="#FFFF8D"
         android:fontFamily="sans-serif"
         android:text="REGISTER"
-        android:textColor="#1B1A1A"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.571"
         app:layout_constraintStart_toStartOf="parent"
