--- a/app/src/main/res/layout/activity_register__org__admin.xml
+++ b/app/src/main/res/layout/activity_register__org__admin.xml
@@ -20,6 +20,7 @@
         android:text="Register Admin"
         android:textColor="#FFFF8D"
         android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,6 +40,7 @@
         android:text="@string/app_name"
         android:textColor="#FFFFFF"
         android:textSize="36sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
