--- a/app/src/main/res/layout/activity_register_org.xml
+++ b/app/src/main/res/layout/activity_register_org.xml
@@ -11,37 +11,39 @@
     <TextView
         android:id="@+id/textView5"
         android:layout_width="274dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="88dp"
+        android:layout_height="0dp"
         android:elegantTextHeight="true"
         android:fontFamily="sans-serif"
+        android:gravity="center"
         android:shadowColor="#B4B1B1"
         android:text="Register New Organization"
         android:textColor="#FFFF8D"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="22sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="288dp"
-        android:layout_height="45dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:elegantTextHeight="true"
         android:fontFamily="sans-serif"
+        android:gravity="center"
         android:shadowColor="#B4B1B1"
         android:text="Snow Leopard"
         android:textColor="#FFFFFF"
         android:textSize="36sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.050000012" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/Region"
@@ -115,13 +117,14 @@
         android:id="@+id/logindr"
         android:layout_width="0dp"
         android:layout_height="42dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="96dp"
         android:fontFamily="sans-serif"
+        android:gravity="center"
         android:text="Already Registered Your Organization? Click Here"
         android:textColor="#FAF5F7"
-        android:textSize="18sp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
