--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -47,7 +47,7 @@
         app:layout_constraintTop_toBottomOf="@+id/EmailRecoveryInput" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/ForgetPassBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
