--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:id="@+id/LoginLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/snow_leopard_wallpaper1"
     tools:context=".LoginActivity">
 
     <ImageView
@@ -27,12 +27,12 @@
         android:id="@+id/RegisterOrgBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:text="New Organization? Register Here"
-        android:textColor="#FAF5F7"
-        android:textSize="18sp"
+        android:textColor="@color/blackColor"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Register0" />
@@ -41,64 +41,76 @@
         android:id="@+id/Register0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="8dp"
         android:text="New Member? Register Here"
-        android:textColor="#FAF5F7"
-        android:textSize="18sp"
+        android:textColor="@color/blackColor"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LoginForget" />
+        app:layout_constraintTop_toBottomOf="@+id/LoginBtn" />
+        //app:layout_constraintTop_toBottomOf="@+id/LoginForget" />
 
     <Button
         android:id="@+id/LoginBtn"
         android:layout_width="0dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:background="#FFFF8D"
+        android:layout_height="45dp"
+        android:layout_marginStart="180dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="80dp"
+        android:background="@color/grayColor"
+        android:backgroundTint="@color/grayColor"
+        android:bottomLeftRadius="20dp"
+        android:bottomRightRadius="20dp"
         android:fontFamily="sans-serif"
         android:text="LOGIN"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
+        android:textColor="@color/blackColor"
+        android:textSize="20sp"
         android:textStyle="bold"
+        android:topLeftRadius="20dp"
+        android:topRightRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
+        app:layout_constraintTop_toBottomOf="@+id/LoginForget"
+        app:strokeColor="@color/blackColor"
+        app:strokeWidth="0.8dp"/>
+        //app:layout_constraintTop_toBottomOf="@+id/password" />
+
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="375dp"
+        android:layout_width="wrap_content"
         android:layout_height="42dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="5dp"
         android:backgroundTint="#FAFAFA"
         android:ems="10"
         android:fontFamily="sans-serif"
         android:hint="Password:"
         android:inputType="textPassword"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
-        android:textStyle="bold"
+        android:textColor="@color/blackColor"
+        android:textColorHint="@color/blackColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email" />
 
     <EditText
         android:id="@+id/email"
-        android:layout_width="375dp"
+        android:layout_width="wrap_content"
         android:layout_height="42dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="5dp"
         android:backgroundTint="#FAFAFA"
         android:ems="10"
         android:fontFamily="sans-serif"
         android:hint="Email:"
         android:inputType="textPersonName"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
-        android:textStyle="bold"
+        android:textColor="@color/blackColor"
+        android:textColorHint="@color/blackColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -108,15 +120,15 @@
         android:layout_width="382dp"
         android:layout_height="42dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:elegantTextHeight="true"
         android:fontFamily="sans-serif"
         android:gravity="center"
         android:shadowColor="#B4B1B1"
-        android:text="Login"
-        android:textColor="#FFFF8D"
+        android:text="Snow Leopard"
+        android:textColor="@color/blackColor"
         android:textSize="28sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -126,16 +138,15 @@
         android:layout_width="401dp"
         android:layout_height="61dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="8dp"
         android:elegantTextHeight="true"
         android:fontFamily="sans-serif"
         android:gravity="center"
-        android:shadowColor="#B4B1B1"
+        android:shadowColor="@color/grayColor"
         android:text="@string/app_name"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/blackColor"
         android:textSize="36sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -159,14 +170,13 @@
         android:id="@+id/LoginForget"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="120dp"
         android:layout_marginEnd="8dp"
         android:gravity="center"
         android:text="Forgot Password?"
-        android:textColor="#FFFEFE"
+        android:textColor="@color/blackColor"
         android:textSize="16sp"
-        android:textStyle="bold"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -176,15 +186,17 @@
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="120dp"
         android:layout_marginTop="8dp"
-        android:buttonTint="#FFEB3B"
+        android:buttonTint="@color/blackColor"
         android:onClick="saveUserEmailPassword"
         android:text="Remember my email and password"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        android:textColor="@color/blackColor"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/password" />
+
         app:layout_constraintTop_toBottomOf="@+id/LoginBtn" />
 
 
