--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -4,17 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/snow_leopard_wallpaper1"
     tools:context=".ForgetPasswordActivity">
 
     <TextView
         android:id="@+id/AccountRecoveryTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="70dp"
         android:fontFamily="sans-serif"
         android:text="Account Recovery"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/blackColor"
         android:textSize="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,8 +29,8 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="24dp"
         android:text="Recover Your Wildlife GeoSnap App Account"
-        android:textColor="#FFFFFF"
-        android:textSize="24dp"
+        android:textColor="@color/blackColor"
+        android:textSize="19sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.166"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,13 +38,25 @@
 
     <Button
         android:id="@+id/RecoverySubmit"
-        android:layout_width="178dp"
+        android:layout_width="0dp"
         android:layout_height="45dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="130dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="130dp"
+        android:backgroundTint="@color/grayColor"
+        android:bottomLeftRadius="20dp"
+        android:bottomRightRadius="20dp"
+        android:topLeftRadius="20dp"
+        android:topRightRadius="20dp"
         android:text="Submit"
+        android:textColor="@color/blackColor"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/EmailRecoveryInput" />
+        app:layout_constraintTop_toBottomOf="@+id/EmailRecoveryInput"
+        app:strokeColor="@color/blackColor"
+        app:strokeWidth="0.8dp" />
 
     <TextView
         android:id="@+id/ForgetPassBack"
@@ -52,7 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
         android:text="Back"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/blackColor"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,16 +73,15 @@
     <EditText
         android:id="@+id/EmailRecoveryInput"
 
-        android:layout_width="328dp"
+        android:layout_width="300dp"
         android:layout_height="48dp"
-
-
-        android:layout_marginTop="32dp"
-        android:background="#FFFFFF"
+        android:layout_marginTop="50dp"
+        android:backgroundTint="#FAFAFA"
         android:ems="10"
+        android:hint="Email:"
 
-        android:hint="Email"
         android:inputType="textPersonName"
+        android:textColorHint="@color/blackColor"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
