--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -81,9 +81,9 @@
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="42dp"
-        android:layout_marginStart="120dp"
+        android:layout_marginStart="130dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="5dp"
         android:backgroundTint="#FAFAFA"
@@ -99,9 +99,9 @@
 
     <EditText
         android:id="@+id/email"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="42dp"
-        android:layout_marginStart="120dp"
+        android:layout_marginStart="130dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="5dp"
         android:backgroundTint="#FAFAFA"
