--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/snow_leopard_wallpaper1"
     tools:context=".Register">
 
 
@@ -12,10 +12,12 @@
         android:id="@+id/RegisterOrgB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
         android:text="Register Organization"
-        android:textColor="#FAF5F7"
-        android:textSize="20sp"
+        android:textColor="@color/blackColor"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/registrationBtn" />
@@ -32,9 +34,8 @@
         android:gravity="center"
         android:shadowColor="#B4B1B1"
         android:text="@string/app_name"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/blackColor"
         android:textSize="36sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,14 +45,14 @@
         android:id="@+id/textView3"
         android:layout_width="230dp"
         android:layout_height="34dp"
+        android:layout_marginTop="8dp"
         android:elegantTextHeight="true"
         android:fontFamily="sans-serif"
         android:gravity="center"
         android:shadowColor="#B4B1B1"
         android:text="Register New Account"
-        android:textColor="#FFFF8D"
+        android:textColor="@color/blackColor"
         android:textSize="22sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -79,28 +80,39 @@
 
     <Button
         android:id="@+id/registrationBtn"
-        android:layout_width="362dp"
+        android:layout_width="0dp"
         android:layout_height="55dp"
-        android:layout_marginTop="54dp"
+        android:layout_marginStart="170dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="80dp"
         android:background="#FFFF8D"
+        android:backgroundTint="@color/grayColor"
+        android:bottomLeftRadius="20dp"
+        android:bottomRightRadius="20dp"
+        android:topLeftRadius="20dp"
+        android:topRightRadius="20dp"
         android:fontFamily="sans-serif"
         android:text="REGISTER"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
+        android:textColor="@color/blackColor"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.571"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/reEnter" />
+        app:layout_constraintTop_toBottomOf="@+id/reEnter"
+        app:strokeColor="@color/blackColor"
+        app:strokeWidth="0.8dp"/>
 
     <TextView
         android:id="@+id/createText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
         android:text="Already have an account? Login Here"
-        android:textColor="#FAF5F7"
-        android:textSize="20sp"
+        android:textColor="@color/blackColor"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -120,90 +132,102 @@
 
     <EditText
         android:id="@+id/fullName"
-        android:layout_width="375dp"
+        android:layout_width="wrap_content"
         android:layout_height="42dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="5dp"
         android:backgroundTint="#FAFAFA"
         android:ems="10"
         android:fontFamily="sans-serif"
         android:hint="Full Name:"
         android:inputType="textPersonName"
-        android:textColorHint="#F8F8F8"
+        android:textColorHint="@color/blackColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <EditText
         android:id="@+id/jobTitle"
-        android:layout_width="375dp"
+        android:layout_width="wrap_content"
         android:layout_height="42dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="5dp"
         android:backgroundTint="#FAFAFA"
         android:ems="10"
         android:fontFamily="sans-serif"
         android:hint="Job Title:"
         android:inputType="textPersonName"
-        android:textColorHint="#F8F8F8"
+        android:textColorHint="@color/blackColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fullName" />
 
     <EditText
         android:id="@+id/email"
-        android:layout_width="375dp"
+        android:layout_width="wrap_content"
         android:layout_height="42dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="5dp"
         android:backgroundTint="#FAFAFA"
         android:ems="10"
         android:fontFamily="sans-serif"
         android:hint="Email:"
         android:inputType="textPersonName"
-        android:textColorHint="#F8F8F8"
+        android:textColorHint="@color/blackColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/jobTitle" />
 
     <EditText
         android:id="@+id/phone"
-        android:layout_width="375dp"
+        android:layout_width="wrap_content"
         android:layout_height="42dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="5dp"
         android:backgroundTint="#FAFAFA"
         android:ems="10"
         android:fontFamily="sans-serif"
         android:hint="Phone Number:"
         android:inputType="textPersonName"
-        android:textColorHint="#F8F8F8"
+        android:textColorHint="@color/blackColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email" />
 
     <EditText
         android:id="@+id/reEnter"
-        android:layout_width="375dp"
+        android:layout_width="wrap_content"
         android:layout_height="42dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="5dp"
         android:backgroundTint="#FAFAFA"
         android:ems="10"
         android:fontFamily="sans-serif"
         android:hint="Re-enter Password:"
         android:inputType="textPassword"
-        android:textColorHint="#F8F8F8"
+        android:textColorHint="@color/blackColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="375dp"
+        android:layout_width="wrap_content"
         android:layout_height="42dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="5dp"
         android:backgroundTint="#FAFAFA"
         android:ems="10"
         android:fontFamily="sans-serif"
         android:hint="Password:"
         android:inputType="textPassword"
-        android:textColorHint="#F8F8F8"
+        android:textColorHint="@color/blackColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/phone" />
