--- a/app/src/main/res/layout/activity_register__org__admin.xml
+++ b/app/src/main/res/layout/activity_register__org__admin.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/snow_leopard_wallpaper1"
     tools:context="org.kashmirworldfoundation.WildlifeGeoSnap.RegisterOrgAdminActivity">
 
 
@@ -12,15 +12,14 @@
         android:id="@+id/textView5"
         android:layout_width="274dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:elegantTextHeight="true"
         android:fontFamily="sans-serif"
         android:gravity="center"
         android:shadowColor="#B4B1B1"
         android:text="Register Admin"
-        android:textColor="#FFFF8D"
+        android:textColor="@color/blackColor"
         android:textSize="24sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,9 +37,8 @@
         android:gravity="center"
         android:shadowColor="#B4B1B1"
         android:text="@string/app_name"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/blackColor"
         android:textSize="36sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,12 +48,14 @@
         android:id="@+id/AdminJob"
         android:layout_width="300dp"
         android:layout_height="51dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
+        android:backgroundTint="#FAFAFA"
         android:fontFamily="sans-serif"
         android:hint="Job:"
         android:inputType="text"
-        android:textColorHint="#F8F8F8"
+        android:textColorHint="@color/blackColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,12 +65,14 @@
         android:id="@+id/AdminName"
         android:layout_width="300dp"
         android:layout_height="51dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="32dp"
+        android:backgroundTint="#FAFAFA"
         android:ems="10"
         android:fontFamily="sans-serif"
         android:hint="Name:"
         android:inputType="text"
-        android:textColorHint="#F8F8F8"
+        android:textColorHint="@color/blackColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,12 +82,14 @@
         android:id="@+id/AdminPhone"
         android:layout_width="300dp"
         android:layout_height="51dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
+        android:backgroundTint="#FAFAFA"
         android:fontFamily="sans-serif"
         android:hint="Phone Number:"
         android:inputType="phone"
-        android:textColorHint="#F8F8F8"
+        android:textColorHint="@color/blackColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/AdminPassword" />
@@ -94,12 +98,14 @@
         android:id="@+id/AdminPassword"
         android:layout_width="300dp"
         android:layout_height="51dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
+        android:backgroundTint="#FAFAFA"
         android:fontFamily="sans-serif"
         android:hint="Password:"
         android:inputType="textPassword"
-        android:textColorHint="#F8F8F8"
+        android:textColorHint="@color/blackColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -109,12 +115,14 @@
         android:id="@+id/AdminEmail"
         android:layout_width="300dp"
         android:layout_height="51dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
+        android:backgroundTint="#FAFAFA"
         android:fontFamily="sans-serif"
         android:hint="Email:"
         android:inputType="text"
-        android:textColorHint="#F8F8F8"
+        android:textColorHint="@color/blackColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
@@ -124,14 +132,23 @@
         android:id="@+id/AdminRegisterB"
         android:layout_width="175dp"
         android:layout_height="41dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="32dp"
         android:background="#FFFF8D"
+        android:backgroundTint="@color/grayColor"
         android:fontFamily="sans-serif"
         android:text="REGISTER"
         android:textColor="#1B1A1A"
         android:textSize="18sp"
+        android:textStyle="bold"
+        android:bottomLeftRadius="20dp"
+        android:bottomRightRadius="20dp"
+        android:topLeftRadius="20dp"
+        android:topRightRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/AdminJob" />
+        app:layout_constraintTop_toBottomOf="@+id/AdminJob"
+        app:strokeColor="@color/blackColor"
+        app:strokeWidth="0.8dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
