--- a/app/src/main/res/layout/activity_register_org.xml
+++ b/app/src/main/res/layout/activity_register_org.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/snow_leopard_wallpaper1"
     tools:context="org.kashmirworldfoundation.WildlifeGeoSnap.RegisterOrgActivity">
 
 
@@ -12,14 +12,15 @@
         android:id="@+id/textView5"
         android:layout_width="274dp"
         android:layout_height="0dp"
+        android:layout_marginTop="8dp"
         android:elegantTextHeight="true"
         android:fontFamily="sans-serif"
         android:gravity="center"
         android:shadowColor="#B4B1B1"
         android:text="Register New Organization"
-        android:textColor="#FFFF8D"
+        android:textColor="@color/blackColor"
+
         android:textSize="22sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,9 +38,9 @@
         android:gravity="center"
         android:shadowColor="#B4B1B1"
         android:text="Wildlife GeoSnap"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/blackColor"
         android:textSize="36sp"
-        android:textStyle="bold"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,12 +50,14 @@
         android:id="@+id/Region"
         android:layout_width="300dp"
         android:layout_height="51dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="#FAFAFA"
         android:ems="10"
         android:fontFamily="sans-serif"
         android:hint="Region"
         android:inputType="text"
-        android:textColorHint="#F8F8F8"
+        android:textColorHint="@color/blackColor"
         app:layout_constraintBottom_toTopOf="@+id/RegisterB"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -63,7 +66,8 @@
         android:id="@+id/countries"
         android:layout_width="300dp"
         android:layout_height="51dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginBottom="16dp"
         android:spinnerMode="dropdown"
         app:layout_constraintBottom_toTopOf="@+id/Region"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,12 +77,14 @@
         android:id="@+id/orgwebsite"
         android:layout_width="300dp"
         android:layout_height="51dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="#FAFAFA"
         android:ems="10"
         android:fontFamily="sans-serif"
         android:hint="Organization Website"
         android:inputType="text"
-        android:textColorHint="#F8F8F8"
+        android:textColorHint="@color/blackColor"
         app:layout_constraintBottom_toTopOf="@+id/OrgPhone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -87,11 +93,14 @@
         android:id="@+id/OrgName"
         android:layout_width="300dp"
         android:layout_height="51dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="40dp"
+        android:backgroundTint="#FAFAFA"
         android:ems="10"
         android:fontFamily="sans-serif"
         android:hint="Organization Name"
         android:inputType="text"
-        android:textColorHint="#F8F8F8"
+        android:textColorHint="@color/blackColor"
         app:layout_constraintBottom_toTopOf="@+id/OrgEmail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -103,12 +112,14 @@
         android:id="@+id/OrgPhone"
         android:layout_width="300dp"
         android:layout_height="51dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="#FAFAFA"
         android:ems="10"
         android:fontFamily="sans-serif"
         android:hint="Phone Number"
         android:inputType="phone"
-        android:textColorHint="#F8F8F8"
+        android:textColorHint="@color/blackColor"
         app:layout_constraintBottom_toTopOf="@+id/countries"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -117,14 +128,14 @@
         android:id="@+id/logindr"
         android:layout_width="0dp"
         android:layout_height="42dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="60dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="96dp"
+        android:layout_marginBottom="32dp"
         android:fontFamily="sans-serif"
         android:gravity="center"
         android:text="Already Registered Your Organization? Click Here"
-        android:textColor="#FAF5F7"
-        android:textSize="16sp"
+        android:textColor="@color/blackColor"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -134,26 +145,37 @@
         android:id="@+id/RegisterB"
         android:layout_width="156dp"
         android:layout_height="46dp"
+        android:layout_marginStart="80dp"
         android:layout_marginBottom="24dp"
         android:background="#FFFF8D"
+        android:backgroundTint="@color/grayColor"
+        android:bottomLeftRadius="20dp"
+        android:bottomRightRadius="20dp"
         android:fontFamily="sans-serif"
         android:text="REGISTER"
         android:textColor="#1B1A1A"
         android:textSize="18sp"
+        android:textStyle="bold"
+        android:topLeftRadius="20dp"
+        android:topRightRadius="20dp"
         app:layout_constraintBottom_toTopOf="@+id/logindr"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:strokeColor="@color/blackColor"
+        app:strokeWidth="0.8dp" />
 
     <EditText
         android:id="@+id/OrgEmail"
         android:layout_width="300dp"
         android:layout_height="51dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="#FAFAFA"
         android:ems="10"
         android:fontFamily="sans-serif"
         android:hint="Organization Email"
         android:inputType="text"
-        android:textColorHint="#F8F8F8"
+        android:textColorHint="@color/blackColor"
         app:layout_constraintBottom_toTopOf="@+id/orgwebsite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
