--- a/app/src/main/res/layout/activity_register_spinner2.xml
+++ b/app/src/main/res/layout/activity_register_spinner2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/snow_leopard_wallpaper1"
     tools:context="org.kashmirworldfoundation.WildlifeGeoSnap.RegisterSpinner2">
 
     <TextView
@@ -15,21 +15,31 @@
         android:fontFamily="sans-serif"
         android:gravity="center"
         android:text="Refresh"
-        android:textColor="#FAF5F7"
-        android:textSize="18sp"
+        android:textColor="@color/blackColor"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/backCon" />
 
     <Button
         android:id="@+id/submit3"
-        android:layout_width="360dp"
+        android:layout_width="wrap_content"
         android:layout_height="55dp"
         android:layout_marginTop="32dp"
+        android:backgroundTint="@color/grayColor"
+        android:bottomLeftRadius="20dp"
+        android:bottomRightRadius="20dp"
         android:text="Submit"
+        android:textColor="@color/blackColor"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:topLeftRadius="20dp"
+        android:topRightRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Spinner_Region" />
+        app:layout_constraintTop_toBottomOf="@+id/Spinner_Region"
+        app:strokeColor="@color/blackColor"
+        app:strokeWidth="0.8dp" />
 
     <TextView
         android:id="@+id/backCon"
@@ -39,8 +49,8 @@
         android:fontFamily="sans-serif"
         android:gravity="center"
         android:text="Choose Country"
-        android:textColor="#FAF5F7"
-        android:textSize="18sp"
+        android:textColor="@color/blackColor"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/submit3" />
@@ -55,7 +65,7 @@
         android:gravity="center"
         android:shadowColor="#B4B1B1"
         android:text="Choose Region"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/blackColor"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
