Added email validation

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -80,7 +80,7 @@
         android:ems="10"
         android:hint="Email:"
 
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
         android:textColorHint="@color/blackColor"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
