--- a/app/src/main/res/layout/fragment_wildlifesighting.xml
+++ b/app/src/main/res/layout/fragment_wildlifesighting.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/background">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/PreyUpload"
+        android:id="@+id/SightingUpload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
@@ -21,7 +21,7 @@
         app:srcCompat="@android:drawable/ic_menu_upload" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/PreyAdd"
+        android:id="@+id/SightingAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
