--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -6,16 +6,9 @@
         <item android:id = "@+id/nav_home"
             android:icon="@drawable/ic_home"
             android:title="Home" />
-        <item android:id = "@+id/nav_list"
+        <item android:id = "@+id/nav_study"
             android:icon="@drawable/ic_list"
-            android:title="List" />
-        <item android:id = "@+id/nav_add"
-            android:icon="@drawable/ic_add"
-            android:title="Add" />
-        <item
-            android:id="@+id/nav_wildlifeSighting"
-            android:icon="@drawable/ic_sighting"
-            android:title="Wildlife Sighting" />
+            android:title="Study" />
         <item android:id = "@+id/nav_map"
             android:icon="@drawable/ic_map"
             android:title="Map" />
