--- a/app/src/main/res/layout/activity_create_station.xml
+++ b/app/src/main/res/layout/activity_create_station.xml
@@ -235,7 +235,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:fontFamily="sans-serif"
-                android:text="Create Station"
+                android:text="Add Camera Station"
                 android:textColor="#FFFFFF"
                 android:textSize="24dp"
                 android:textStyle="bold"
